codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_panel_banked_reset.snap
---
source: tui/src/chatwidget/tests/usage_limit_reset_tests.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 100))"
---
  dev@example.com · 0% context used · 0 total tokens

  [Usage]

     Account         dev@example.com
     Plan            Pro
     Model           gpt-5.6
     Provider        openai
     Context         0% used
     Tokens          0 total · 0 input · 0 output
     Account limits  no usage limit data returned
› 1. Usage reset     1 usage limit reset available · auto off

  Press enter to confirm or esc to go back
