codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_panel_loading.snap
---
source: tui/src/chatwidget/tests/status_command_tests.rs
expression: loading_popup
---
  dev@example.com · 34% context used · 52K total tokens

  [Usage]

     Plan            Pro
     Model           gpt-5.6
     Provider        openai
     Context         34% used · 52K / 128K
     Tokens          52K total · 50K input · 2K output
     Account limits  refreshing account limits...
     Usage reset     availability unknown until limits refresh · auto off
› 1. Refresh         refreshing usage data

  Press enter to confirm or esc to go back
