codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_panel_unavailable_limits.snap
---
source: tui/src/chatwidget/tests/status_command_tests.rs
expression: popup
---
  API key · 26% context used · 42K total tokens

  [Usage]

›    Account         API key
     Model           gpt-5.6-sol
     Provider        openai
     Context         26% used · 42K / 128K
     Tokens          42K total · 35K input · 7K output
     Account limits  account limits unavailable for this provider
     Refresh         no refreshable usage source

  Press enter to confirm or esc to go back
