codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_panel_with_limits.snap
---
source: tui/src/chatwidget/tests/status_command_tests.rs
expression: refreshed_popup
---
  dev@example.com · 34% context used · 52K total tokens

  [Usage]

     Plan         Pro
     Model        gpt-5.6
     Provider     openai
     Context      34% used · 52K / 128K
     Tokens       52K total · 50K input · 2K output
     60m limit    73% left
     Usage reset  availability unknown until limits refresh · auto off
› 1. Refresh      refresh usage data

  Press enter to confirm or esc to go back
