codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__webhook_empty_inbox.snap
---
source: tui/src/chatwidget/tests/webhook.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Webhook events
  Select an event to inspect or inject

  Search webhook events
› No webhook events          Subscribed app events will appear here.

  Press enter to confirm or esc to go back
